--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "react-use-measure": "^2.1.7",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "three": "^0.167.1"
